force-app/main/default/objects/ccrz__L_Logger__c/ccrz__L_Logger__c.object-meta.xml
<CustomObject>
    <description>This logs the debug logs created for the source application</description>
    <label>L_Logger</label>
    <nameField>
        <label>Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L_Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>