force-app/main/default/objects/ccrz__L_Logger__c/fields/ccrz__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Log_Level__c</fullName>
    <description>Describes the different logging levels available in Salesforce</description>
    <inlineHelpText>Describes the different logging levels available in Salesforce</inlineHelpText>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>