force-app/main/default/objects/ccrz__L_Logger__c/fields/ccrz__Log_Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Log_Status__c</fullName>
    <description>Stores the logging status as needed in the code</description>
    <label>Log Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>