force-app/main/default/objects/ccrz__L_Logger__c/fields/ccrz__Log_Value__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Log_Value__c</fullName>
    <description>Stores the actual string to be logged into the database.</description>
    <label>Log Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>